--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World</title>
   </head>
-  <body class="min-h-svh text-white">
+  <body class="min-h-svh text-light">
     <div id="app" class="min-h-svh"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
